# creative-editor-agent

./: .env.example  .gitignore  CODE_GUIDE.md  CODE_GUIDE_ANNOTATED.md  PROJECT_FLOW.md  README.md  SECURITY.md  START.md  benchmark.py  demo.py  frontend.html  keyword_demo.html  pyproject.toml  pytest.ini  requirements.txt  server.py  setup_env.py
docs/: AD_POLICIES.md  CODE_GUIDE.md  MARKET_LANGUAGES.md  PROJECT_FLOW.html  PROJECT_FLOW.md  SECURITY.md  WEEKLY_REPORT_2026-06-01.md  WORKFLOW.md
reports/: benchmark_details.json  benchmark_report.md
scripts/: demo_full.py  demo_minimal.py  test_json.py  test_llm.py
src/creative_agent/: __init__.py
tests/property/: test_angle_generation_props.py  test_angle_splitter_props.py  test_display_width_props.py  test_language_prompts_props.py  test_native_generation_props.py  test_ranking_diversity_props.py  test_semantic_diversity_props.py
tests/unit/: test_ad_group_quota.py  test_angle_splitter.py  test_compliance_score.py  test_composite_scorer.py  test_creative_generator_angle_fallback.py  test_creative_generator_display_width.py  test_creative_generator_fit_first.py  test_creative_generator_native_fallback.py  test_creative_generator_truncation.py  test_custom_constraints.py  test_display_width.py  test_diversity_config.py  test_gateway_validation.py  test_keyword_embedder_match.py  test_keyword_localizer.py  test_keyword_match.py  test_keyword_priority_swap.py  test_lightweight_embedding.py  test_pipeline_localization_skip.py  test_pipeline_semantic_diversity.py  test_platform_spec.py  test_review_translator.py  (+1 more)
(+50 files in other folders)
