[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creative-editor-agent"
version = "0.1.0"
description = "Coco AI Creative Editor Agent — orchestrates LLM tools to generate compliant, multilingual ad creatives with A/B ranking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Coco AI Team" },
]
dependencies = [
    "pydantic>=2.0",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "PyYAML>=6.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: unit tests",
    "property: property-based tests (Hypothesis)",
    "integration: integration tests (mock or real LLM)",
    "slow: tests that take more than a couple of seconds",
]
